Updated activity endpoints
