# server/src/routes/api/activities.js
@@ -4,17 +4,12 @@ const express = require('express'),
 	errorCtrl = require('../../controllers/error'),
 	actCtrl = require('../../controllers/activity');
 
-
 router.route('/')
-	.get(actCtrl.getRecentActivities)
-	.post(actCtrl.create) // TODO: REMOVEME
+	.get(actCtrl.getAll)
 	.all(errorCtrl.send405);
-
-// Note: User activities are part of the User route
 
 router.route('/followed')
 	.get(actCtrl.getFollowedActivities)
 	.all(errorCtrl.send405);
-
 
 module.exports = router;
